--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -20,6 +20,7 @@ CPPOBJS_STD= task.obj ccoroutine.obj ctypes.obj carray.obj cgate.obj \
          cpacket.obj cfsm.obj cstruct.obj cchannel.obj cenum.obj cexception.obj cdispstr.obj \
          cdefaultlist.obj cscheduler.obj onstartup.obj random.obj distrib.obj
 CPPOBJS_NETBUILDER= netbuilder\cdynamicmodule.obj netbuilder\cdynamicnetwork.obj \
+                    netbuilder\cdynamicchannel.obj \
                     netbuilder\cnednetworkbuilder.obj netbuilder\loadnedfile.obj
 CPPOBJS_PARSIM= parsim\ccommbuffer.obj parsim\cmemcommbuffer.obj \
          parsim\cparsimpartition.obj parsim\cplaceholdermod.obj parsim\cproxygate.obj \
