--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -11,7 +11,7 @@ CFLAGS=$(CFLAGS) /DWIN32_DLL
 # Local definitions
 #
 COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../sim" /DBUILDING_ENVIR /DHAVE_DLOPEN=$(HAVE_DLOPEN)
-OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj \
+OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj fsutils.obj \
      seeds.obj patmatch.obj platdep.obj speedmtr.obj filemgrs.obj akoutvectormgr.obj
 LIBS=$(OMNETPP_SRC_DIR)/sim/sim_std.ilib
 
