--- a/samples/tokenring/omnetpp.ini
+++ b/samples/tokenring/omnetpp.ini
@@ -1,13 +1,9 @@
 [General]
 network = token
-ini-warnings = no
-warnings = yes
-snapshot-file = token.sna
-log-parchanges = no
 random-seed = 1
 total-stack-kb=4096 ;4 Mbyte -- increase if necessary
 sim-time-limit = 1800s
-; cpu-time-limit= 300s
+# cpu-time-limit= 300s
 
 [Cmdenv]
 runs-to-execute = 1,2,3
@@ -21,12 +17,6 @@ performance-display = no
 
 [Tkenv]
 default-run=1
-use-mainwindow = yes
-print-banners = yes
-slowexec-delay = 300ms
-update-freq-fast = 10
-update-freq-express = 1000
-breakpoints-enabled = yes
 extra-stack=20000 ;20K, but 10K is probably enough
 
 [Parameters]
