--- a/src/nedxml/Makefile.vc
+++ b/src/nedxml/Makefile.vc
@@ -91,6 +91,7 @@ cppmsggenerator.obj: cppmsggenerator.cc \
   cppexprgenerator.h \
   nedcompiler.h
 lex.yy.obj: lex.yy.cc \
+  ./unistd.h \
   nedgrammar.h \
   ned.tab.h
 ned.tab.obj: ned.tab.cc \
