--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -70,16 +70,17 @@ akoutvectormgr.o: akoutvectormgr.cc \
   ../../include/macros.h \
   akoutvectormgr.h \
   ../../include/defs.h \
-  ../../include/cpar.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cexception.h \
   ../../include/carray.h \
   ../../include/globals.h \
+  ../../include/cexception.h \
   args.h \
   envdefs.h \
   ../../include/envirext.h \
+  ../../include/cobject.h \
+  ../../include/util.h \
+  ../../include/cpolymorphic.h \
   ../../include/onstartup.h \
+  ../../include/opp_string.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/ccoroutine.h \
@@ -106,14 +107,15 @@ cenvir.o: cenvir.cc \
   envdefs.h \
   ../../include/defs.h \
   ../../include/random.h \
-  ../../include/cpar.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cexception.h \
   ../../include/carray.h \
   ../../include/globals.h \
+  ../../include/cexception.h \
   ../../include/envirext.h \
+  ../../include/cobject.h \
+  ../../include/util.h \
+  ../../include/cpolymorphic.h \
   ../../include/onstartup.h \
+  ../../include/opp_string.h \
   ../../include/ccoroutine.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
@@ -128,9 +130,6 @@ cinifile.o: cinifile.cc \
   cinifile.h \
   patmatch.h \
   ../../include/defs.h \
-  ../../include/cpar.h \
-  ../../include/cobject.h \
-  ../../include/cexception.h \
   envdefs.h
 filemgrs.o: filemgrs.cc \
   ../../include/defs.h \
@@ -142,16 +141,17 @@ filemgrs.o: filemgrs.cc \
   ../../include/cstat.h \
   ../../include/macros.h \
   filemgrs.h \
-  ../../include/cpar.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cexception.h \
   envdefs.h \
   ../../include/carray.h \
   ../../include/globals.h \
+  ../../include/cexception.h \
   args.h \
   ../../include/envirext.h \
+  ../../include/cobject.h \
+  ../../include/util.h \
+  ../../include/cpolymorphic.h \
   ../../include/onstartup.h \
+  ../../include/opp_string.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/ccoroutine.h \
@@ -160,6 +160,12 @@ filemgrs.o: filemgrs.cc \
   ../../include/cgate.h \
   ../../include/cdefaultlist.h \
   ../../include/ctypes.h
+fsutils.o: fsutils.cc \
+  ../../include/opp_string.h \
+  fsutils.h \
+  ../../include/cexception.h \
+  ../../include/defs.h \
+  ../../include/util.h
 main.o: main.cc \
   ../../include/cobject.h \
   ../../include/csimul.h \
@@ -168,18 +174,20 @@ main.o: main.cc \
   ../../include/onstartup.h \
   ../../include/defs.h \
   ../../include/util.h \
+  ../../include/cpolymorphic.h \
   ../../include/cexception.h \
+  ../../include/opp_string.h \
   ../../include/errmsg.h \
   ../../include/globals.h \
   ../../include/cmsgheap.h \
   ../../include/ccoroutine.h \
-  ../../include/coutvect.h \
-  ../../include/cpar.h
+  ../../include/coutvect.h
 omnetapp.o: omnetapp.cc \
   args.h \
   omnetapp.h \
   cinifile.h \
   patmatch.h \
+  fsutils.h \
   ../../include/ctypes.h \
   ../../include/ccoroutine.h \
   ../../include/csimul.h \
@@ -187,6 +195,7 @@ omnetapp.o: omnetapp.cc \
   ../../include/cpar.h \
   ../../include/random.h \
   ../../include/cmodule.h \
+  ../../include/cparsimcomm.h \
   envdefs.h \
   ../../include/defs.h \
   ../../include/carray.h \
@@ -196,7 +205,9 @@ omnetapp.o: omnetapp.cc \
   ../../include/envirext.h \
   ../../include/cobject.h \
   ../../include/util.h \
+  ../../include/cpolymorphic.h \
   ../../include/onstartup.h \
+  ../../include/opp_string.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/coutvect.h \
@@ -212,8 +223,7 @@ platdep.o: platdep.cc \
   ../../include/util.h \
   ../../include/cexception.h \
   ../../include/cenvir.h \
-  ../../include/cpar.h \
-  ../../include/cobject.h
+  ../../include/opp_string.h
 seeds.o: seeds.cc \
   omnetapp.h \
   ../../include/carray.h \
@@ -226,8 +236,9 @@ seeds.o: seeds.cc \
   ../../include/cobject.h \
   ../../include/defs.h \
   ../../include/util.h \
+  ../../include/cpolymorphic.h \
   ../../include/onstartup.h \
-  ../../include/cpar.h
+  ../../include/opp_string.h
 speedmtr.o: speedmtr.cc \
   speedmtr.h \
   ../../include/defs.h \
